@@ -1,3 +1,7 @@
+2007-02-15  Yvan Vanhullebus  <vanhu@netasq.com>
+	* src/racoon/isakmp.c: Fixed the way phase1/2 messages are
+	  sent/resent, to avoid zombie handles and acces to freed memory.
+
 2007-02-02  Yvan Vanhullebus  <vanhu@netasq.com>
 	* src/racoon/cfparse.y: Fixed a check of NAT-T support in libipsec. 
 
